# rediswa

./: CMakeLists.txt  MyProtocol.drawio  README.md  run.fish
Cli/: client.cpp
Libs/server/: CMakeLists.txt  README.md  connection.cpp  fd_utils.cpp  fd_utils.h  request.cpp  response.cpp  response.h  server.cpp  server.h  tcp_socket.cpp  tcp_socket.h
Tests/: hello.cpp
src/: client.cpp  connection.cpp  connection.h  in_memory_kvstore.cpp  in_memory_kvstore.h  kvstore.h  main.cpp  protocol.cpp  protocol.h  request.cpp  request.h  response.cpp  response.h  routes.cpp  routes.h  server.cpp  server.h
